# TRIVO-AI-PLM

./: Dockerfile  Makefile  README.md  add_issues.sh  alembic.ini  assign_all.sh  daily-2025-04-26.md  daily-checklist-template.md  docker-compose.yml  mkdocs.yml  package-lock.json  pyproject.toml  refine_issues.sh  requirements.txt  roadmap.md
.github/: CODEOWNERS  ISSUES.md  auto-assign.yml  auto-merge.yml  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature.md  feature_request.md
.github/projects/: kanban.yml  sprint_planning.yml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: initial_migration.py
scripts/: add_physical_properties.py  assign_sprint.sh  build_database.py  crear_kanban_nextgen.py  create_issues.py  data_collection.py  generar_estructura_github.py  generate_ingredients.py  genetic_optimizer.py  init_db.py  load_ingredients.py  setup_kanban.sh  sync_sprint.py  training.py
scripts/resultados_main/: 20250317_085901.txt  20250317_090739.txt
src/api/: main.py
src/trivo_plm/domain/models/: dough_formulator.py  ingredient.py  (+3 more)
tests/core/: test_config.py
tests/core/cache/: test_redis_cache.py
tests/core/models/: test_dough_formulator.py  test_models.py  test_recipe.py  test_user_preference.py
tests/core/services/: test_recommendation_service.py  test_simple_recommender.py  test_usda_client.py  test_usda_service.py  test_usda_service_additional.py
tests/features/recommendations/: test_recommendation_engine.py
tests/integration/: test_usda_service.py
(+4 files in other folders)
